--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,1 +1,49 @@
-<p>login funzt ~!</p>
+<section class="landing-cont">
+  <div class="header-cont">
+    <div class="logo">
+      <span>CHILL</span>
+      <span class="n-letter">'N'</span>
+      <span>FLIX</span>
+    </div>
+  </div>
+
+  <div class="login-cont">
+    <div class="login-form">
+      <h3>Einloggen</h3>
+      <div>
+        <div class="mail-container">
+          <mat-form-field>
+            <mat-label>Gib deine E-Mail ein</mat-label>
+            <input matInput placeholder="email@mail.com" [formControl]="email" (blur)="updateMailErrorMessage()" required />
+            @if (email.invalid) { 
+              <mat-error> {{ mailErrorMessage() }} </mat-error> 
+            }
+          </mat-form-field>
+        </div>
+
+        <div class="password-container">
+          <mat-form-field>
+            <mat-label>Gib dein Passwort ein</mat-label>
+            <input matInput [formControl]="password" [type]="hide() ? 'password' : 'text'" />
+            <button mat-icon-button matSuffix (click)="clickEvent($event)" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide()">
+              <mat-icon>{{ hide() ? "visibility_off" : "visibility" }}</mat-icon>
+            </button>
+          </mat-form-field>
+        </div>
+
+        <button (click)="tryLogin()" type="button" [disabled]="email.invalid || email.value === '' " class="login-btn">
+          Einloggen
+        </button>
+      </div>
+
+      <div class="or">
+        <span>oder</span>
+      </div>
+
+      <div class="pw-reset">
+        <a href="#">Passwort vergessen ?</a>
+      </div>
+
+    </div>
+  </div>
+</section>
