--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -1,1 +1,11 @@
-<p>registration works!</p>
+<section class="register-cont">
+    <div class="header-cont">
+      <div class="logo">
+        <span>CHILL</span>
+        <span class="n-letter">'N'</span>
+        <span>FLIX</span>
+      </div>
+    </div>
+
+  </section>
+  
