--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -11,7 +11,7 @@
     <div class="login-form">
       <h3>Einloggen</h3>
       <div>
-        <div class="mail-container">
+        <div class="mail-container custom-input-login">
           <mat-form-field>
             <mat-label>Gib deine E-Mail ein</mat-label>
             <input matInput placeholder="email@mail.com" [formControl]="email" (blur)="updateMailErrorMessage()" required />
@@ -21,7 +21,7 @@
           </mat-form-field>
         </div>
 
-        <div class="password-container">
+        <div class="password-container custom-input-login">
           <mat-form-field>
             <mat-label>Gib dein Passwort ein</mat-label>
             <input matInput [formControl]="password" [type]="hide() ? 'password' : 'text'" />
