--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -108,3 +108,9 @@ a {
     color: #e50914;
   }
 }
+
+:host ::ng-deep .custom-input-login .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: rgba(255, 255, 255, 0.08) !important;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
