--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -1,11 +1,23 @@
 <section class="register-cont">
-    <div class="header-cont">
-      <div class="logo">
-        <span>CHILL</span>
-        <span class="n-letter">'N'</span>
-        <span>FLIX</span>
-      </div>
+  <div class="header-cont">
+    <div class="logo">
+      <span>CHILL</span>
+      <span class="n-letter">'N'</span>
+      <span>FLIX</span>
     </div>
+    <div class="right-cont">
+      <a [routerLink]="['/login']" class="login-btn">
+       Einloggen
+      </a>
+    </div>
+  </div>
+  <div class="divider"></div>
 
-  </section>
+
+  <div class="steps">
+    <app-step-0 *ngIf="!isStep1 && !isStep2" (stepChange)="changeStep($event)"></app-step-0>
+    <app-step-1 *ngIf="isStep1" (stepChange)="changeStep($event)"></app-step-1>
+    <app-step-2 *ngIf="isStep2"></app-step-2>
+  </div>
   
+</section>
