--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -2,6 +2,7 @@
 
 .register-cont {
   max-width: 1920px;
+  width:100%;
   height: 100vh;
   @include dFlex(column, flex-start, center);
   > .header-cont {
@@ -47,4 +48,18 @@
   width: 100%;
   height: 1px;
   background-color: rgba($color: #000000, $alpha: 0.1);
+}
+
+.spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba($color: #000000, $alpha: 0.3);
+  > .spinner-cont {
+    @include dFlex(row, center, center);
+    height: 100vh;
+    width: 100%;
+  }
 }
