--- a/src/app/authentication/registration/step-2/step-2.component.html
+++ b/src/app/authentication/registration/step-2/step-2.component.html
@@ -1,1 +1,16 @@
-<p>step-2 works!</p>
+<div class="stepping">
+    <div class="step-headline">
+      <span>SCHRITT 3 VON 3</span>
+    </div>
+  
+    <h2>Hervorragend ! Dein Konto wurde erstellt.</h2>
+    <p>
+      Bitte bestaetige nun nur noch deine Emailadresse 
+      um die Registrierung abzuschliessen !
+    </p>
+    
+    <div (click)="backToLogin()" class="continue-btn">
+      <span>Zum Login</span>
+    </div>
+  </div>
+  
