--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -9,6 +9,8 @@
 
   <div class="login-cont">
     <div class="login-form">
+      <span *ngIf="this.globals.accountNotExist()">Es konnte kein Konto gefunden werden</span>
+      <span *ngIf="this.globals.tryAgain()">Versuch es noch einmal !</span>
       <h3>Einloggen</h3>
       <div>
         <div class="mail-container custom-input-login">
@@ -24,7 +26,10 @@
         <div class="password-container custom-input-login">
           <mat-form-field>
             <mat-label>Gib dein Passwort ein</mat-label>
-            <input matInput [formControl]="password" [type]="hide() ? 'password' : 'text'" />
+            <input matInput [formControl]="password" minlength="4" [type]="hide() ? 'password' : 'text'" />
+            @if (password.invalid) { 
+              <mat-error> Password muss aus 4 Zeichen bestehen </mat-error> 
+            }
             <button mat-icon-button matSuffix (click)="clickEvent($event)" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide()">
               <mat-icon>{{ hide() ? "visibility_off" : "visibility" }}</mat-icon>
             </button>
@@ -41,7 +46,7 @@
       </div>
 
       <div class="pw-reset">
-        <a href="#">Passwort vergessen ?</a>
+        <a [routerLink]="['/pw-reset']">Passwort vergessen ?</a>
       </div>
 
     </div>
