--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -3,6 +3,7 @@
 .landing-cont {
   max-width: 1920px;
   height: 100vh;
+  width: 100%;
   @include dFlex(column, flex-start, center);
   margin: 0px 124px;
   > .header-cont {
@@ -30,6 +31,10 @@
       min-width: 400px;
       padding: 48px 64px;
       background-color: rgba($color: #000000, $alpha: 0.6);
+      > span {
+        color: #ee2222;
+        font-size: 24px;
+      }
       > h3 {
         font-size: 32px;
         color: #ffffff;
