--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,13 @@ app-pw-reset {
   justify-content: center;
 }
 
+app-footer {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-color: rgba($color: #000000, $alpha: 0.3);
+}
+
 label {
   color: rgba(255, 255, 255, 0.8) !important;
 }
