added pw reset section with its functionality, login works too

--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -12,6 +12,9 @@
     @include dFlex(row, space-between, center);
     > .logo {
       @include dFlex(row, flex-start, center);
+      &:hover {
+        cursor: pointer;
+      }
       > span {
         color: #e50815;
         font-size: 32px;
