--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,6 +1,6 @@
 <section class="landing-cont">
   <div class="header-cont">
-    <div class="logo">
+    <div [routerLink]="['']" class="logo">
       <span>CHILL</span>
       <span class="n-letter">'N'</span>
       <span>FLIX</span>
