--- a/src/app/authentication/pw-reset/pw-reset.component.scss
+++ b/src/app/authentication/pw-reset/pw-reset.component.scss
@@ -1,111 +1,138 @@
-@import '../../../styles.scss';
+@import "../../../styles.scss";
 
-
-.pw-cont{
-    max-width: 1920px;
-    height: 100vh;
+.pw-cont {
+  max-width: 1920px;
+  height: 100vh;
+  width: 100%;
+  @include dFlex(column, flex-start, center);
+  margin: 0px 124px;
+  > .header-cont {
     width: 100%;
-    @include dFlex(column, flex-start, center);
-    margin: 0px 124px;
-    > .header-cont{
-        width: 100%;
-        height: 100px;
-        @include dFlex(row, space-between, center);
-        > .logo{
-            &:hover {
-                cursor: pointer;
-            }
-            @include dFlex(row, flex-start, center);
-            > span {
-                color: #e50815;
-                font-size: 32px;
-                font-weight: 700;
-            }
-            > .n-letter{
-                color: #ffffff;
-                padding: 0px 4px;
-            }
-        }  
-        > .right-cont{
-            @include dFlex(row, flex-end, center);
-            > .login-btn{
-                transition: all 0.3s ease-in-out;
-                text-decoration: none;
-                width: 98px;
-                height: 32px;
-                border-radius: 4px;
-                background-color: #e50815;
-                @include dFlex(row, center, center);
-                &:hover{
-                    background-color: #ac040f;
-                }
-                > span {
-                    font-size: 16px;
-                    font-weight: 700;
-                    color: #ffffff;
-                }
-            }
-        } 
+    height: 100px;
+    @include dFlex(row, space-between, center);
+    > .logo {
+      &:hover {
+        cursor: pointer;
+      }
+      @include dFlex(row, flex-start, center);
+      > span {
+        color: #e50815;
+        font-size: 32px;
+        font-weight: 700;
+      }
+      > .n-letter {
+        color: #ffffff;
+        padding: 0px 4px;
+      }
+    }
+    > .right-cont {
+      @include dFlex(row, flex-end, center);
+      > .login-btn {
+        transition: all 0.3s ease-in-out;
+        text-decoration: none;
+        width: 98px;
+        height: 32px;
+        border-radius: 4px;
+        background-color: #e50815;
+        @include dFlex(row, center, center);
+        &:hover {
+          background-color: #ac040f;
+        }
+        > span {
+          font-size: 16px;
+          font-weight: 700;
+          color: #ffffff;
+        }
+      }
+    }
+  }
+
+  > .mail-cont {
+    margin-top: 256px;
+    @include dFlex(column, center, center);
+    > span {
+      color: #ffffff;
+      font-size: 48px;
+      font-weight: 700;
+    }
+    > p {
+      color: #ffffff;
+      font-size: 28px;
+      &:nth-child(3) {
+        margin-top: 0px;
+      }
     }
 
-    > .mail-cont {
-        margin-top: 256px;
-        @include dFlex(column, center, center);
+    > .mail-input {
+      @include dFlex(row, center, center);
+      gap: 8px;
+      > .mail-input-cont {
+        padding: 12px 18px;
+        border-radius: 4px;
+        border: 1px solid #ffffff;
+        > input {
+          width: 100%;
+          max-width: 100%;
+          overflow: hidden;
+          background-color: transparent;
+          border: none;
+          outline: none;
+          color: #ffffff;
+          font-size: 20px;
+          &::placeholder {
+            color: #ffffff;
+          }
+        }
+      }
+      > .go-btn {
+        @include dFlex(row, center, center);
+        gap: 16px;
+        padding: 12px 24px;
+        border-radius: 4px;
+        transition: all 150ms;
+        border: none;
+        > span {
+          color: #ffffff;
+          font-size: 24px;
+          font-weight: 500;
+        }
+        > mat-icon {
+          color: #ffffff;
+        }
+      }
+      > .back-btn {
+        transition: all 0.3s ease-in-out;
+        padding: 12px 24px;
+        font-size: 24px;
+        font-weight: 700;
+        border-radius: 4px;
+        border: none;
+        background-color: #e50815;
+        color: #ffffff;
         > span {
             color: #ffffff;
-            font-size: 48px;
-            font-weight: 700;
+            font-size: 24px;
+            font-weight: 500;
         }
-        > p {
-            color:#ffffff;
-            font-size: 28px;
-            &:nth-child(3){
-                margin-top: 0px;
-            }
+        &:hover {
+            cursor: pointer;
+            background-color: #ac040f;
         }
-     
-        > .mail-input {
-            @include dFlex(row, center, center);
-            gap: 8px;
-            > .mail-input-cont {
-                padding: 12px 18px;
-                border-radius: 4px;
-                border: 1px solid #ffffff;
-                > input {
-                    width: 100%;
-                    max-width: 100%;
-                    overflow: hidden;
-                    background-color: transparent;
-                    border: none;
-                    outline: none;
-                    color: #ffffff;
-                    font-size: 20px;
-                    &::placeholder {
-                        color: #ffffff;
-                    }
-                }
-            }
-            > .go-btn {
-                @include dFlex(row, center, center);
-                gap: 16px;
-                background-color: #e50815;
-                padding: 12px 24px;
-                border-radius: 4px;
-                transition: all 150ms;
-                > span {
-                    color: #ffffff;
-                    font-size: 24px;
-                    font-weight: 500;
-                }
-                > mat-icon {
-                    color: #ffffff;
-                }
-                &:hover {
-                    cursor: pointer;
-                    background-color: #ac040f;
-                }
-            }	
-        }
-        
+      }
     }
+  }
+}
+
+.disabled {
+  background-color: grey;
+  cursor: not-allowed;
+}
+
+.enabled {
+    transition: all 0.3s ease-in-out;
+  background-color: #e50815;
+  &:hover {
+    cursor: pointer;
+    background-color: #ac040f;
+  }
 }
