footer customizing, started main components

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,11 +1,5 @@
 <section class="landing-cont">
-  <div class="header-cont">
-    <div [routerLink]="['']" class="logo">
-      <span>CHILL</span>
-      <span class="n-letter">'N'</span>
-      <span>FLIX</span>
-    </div>
-  </div>
+  <app-header></app-header>
 
   <div class="login-cont">
     <div class="login-form">
