--- a/src/app/foot/footer/footer.component.html
+++ b/src/app/foot/footer/footer.component.html
@@ -1,5 +1,5 @@
 <section class="footer">
     <div class="left-cont">Impressum</div>
-    <div class="middle-cont">Sebastian Wolff</div>
+    <div class="middle-cont"><mat-icon>copyright</mat-icon>Sebastian Wolff</div>
     <div class="right-cont">Datenschutzerklärung</div>
 </section>
