--- a/src/app/authentication/landingpage/landingpage.component.html
+++ b/src/app/authentication/landingpage/landingpage.component.html
@@ -1,16 +1,5 @@
 <section class="landing-cont">
-    <div class="header-cont">
-        <div class="logo">
-            <span>CHILL</span>
-            <span class="n-letter">'N'</span>
-            <span>FLIX</span>
-        </div>
-        <div class="right-cont">
-            <a [routerLink]="['/login']" class="login-btn">
-                <span>Login</span>
-            </a>
-        </div>
-    </div>
+    <app-header></app-header>
 
     <div class="mail-cont">
         <span>Unbegrenzt Filme, Serien und mehr.</span>
