--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,6 +71,12 @@ app-header {
   width: 100%;
 }
 
+app-main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 app-landingpage {
   display: flex;
   width: 100%;
