--- a/src/app/head/logged-header/logged-header.component.html
+++ b/src/app/head/logged-header/logged-header.component.html
@@ -6,6 +6,7 @@
       <span>FLIX</span>
     </div>
     <div class="menu">
+      <span>Startseite</span>
       <span>Filme</span>
       <span>Serien</span>
       <span>Platzhalter</span>
@@ -14,20 +15,27 @@
 
 
   <div class="right-cont">
-    <div class="drop-down-btn">
+    <div class="drop-down-btn" (click)="toggleArrow()" [matMenuTriggerFor]="menu">
       <img src="../../../assets/avatare/avatar1.png" alt="">
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-        <mat-icon class="arrow_drop_down">arrow_drop_down</mat-icon>
-      </button> 
+      <mat-icon [ngClass]="menuIsOpen ? 'arrow-drop-down' : 'arrow-drop-up'">arrow_drop_down</mat-icon>
     </div>
-    <mat-menu #menu="matMenu">
+    <mat-menu #menu="matMenu" (closed)="menuOpened(false)" >
+      <button mat-menu-item>
+        <mat-icon>manage_accounts</mat-icon>
+        <span>Konto</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>lock</mat-icon>
+        <span>Datenschutz</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>description</mat-icon>
+        <span>Impressum</span>
+      </button>
+      <div style="height: 2px; background-color:black"></div>
       <button mat-menu-item>
         <mat-icon>logout</mat-icon>
         <span style="text-align: center;">Logout</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Check voice mail</span>
       </button>
     </mat-menu>
   </div>
