--- a/src/app/head/logged-header/logged-header.component.html
+++ b/src/app/head/logged-header/logged-header.component.html
@@ -19,23 +19,23 @@
       <img src="../../../assets/avatare/avatar1.png" alt="">
       <mat-icon [ngClass]="menuIsOpen ? 'arrow-drop-down' : 'arrow-drop-up'">arrow_drop_down</mat-icon>
     </div>
-    <mat-menu #menu="matMenu" (closed)="menuOpened(false)" >
+    <mat-menu #menu="matMenu" (closed)="menuOpened(false)" xPosition="before">
       <button mat-menu-item>
-        <mat-icon>manage_accounts</mat-icon>
-        <span>Konto</span>
+        <mat-icon class="outlined">manage_accounts</mat-icon>
+        <span class="menu-pnts">Konto</span>
       </button>
       <button mat-menu-item>
-        <mat-icon>lock</mat-icon>
-        <span>Datenschutz</span>
+        <mat-icon class="outlined">lock</mat-icon>
+        <span class="menu-pnts">Datenschutz</span>
       </button>
       <button mat-menu-item>
         <mat-icon>description</mat-icon>
-        <span>Impressum</span>
+        <span class="menu-pnts">Impressum</span>
       </button>
       <div style="height: 2px; background-color:black"></div>
       <button mat-menu-item>
         <mat-icon>logout</mat-icon>
-        <span style="text-align: center;">Logout</span>
+        <span class="menu-pnts" style="text-align: center;">Logout</span>
       </button>
     </mat-menu>
   </div>
