--- a/src/app/main-content/slider-comp/slider-comp.component.html
+++ b/src/app/main-content/slider-comp/slider-comp.component.html
@@ -1,14 +1,18 @@
 <section class="slider-cont">
     <div class="category-container">
-        <h2>Kategorie 1</h2>
+        <h2>Filme</h2>
         <div class="scroll-container">
-          <button class="scroll-button left" (click)="scrollTo(-200)"></button>
+          <button class="scroll-button left" (click)="scrollTo(-200)">
+            <mat-icon>chevron_left</mat-icon>
+          </button>
           <div class="content-container" #category1>
             <div class="item" *ngFor="let item of items1">
-              <img [src]="item" alt="Bild">
+              <app-video-item [videoItem]="item"></app-video-item>
             </div>
           </div>
-          <button class="scroll-button right" (click)="scrollTo(200)"></button>
+          <button class="scroll-button right" (click)="scrollTo(200)">
+            <mat-icon>chevron_right</mat-icon>
+          </button>
         </div>
       </div>
 </section>
