added login and redirect if there is no token for authentication, added logout, fixed background bug if user jumps back to landingpage from main or registration

--- a/src/app/head/logged-header/logged-header.component.html
+++ b/src/app/head/logged-header/logged-header.component.html
@@ -33,7 +33,7 @@
         <span class="menu-pnts">Impressum</span>
       </button>
       <div style="height: 2px; background-color:black"></div>
-      <button mat-menu-item>
+      <button (click)="logOut()" mat-menu-item>
         <mat-icon>logout</mat-icon>
         <span class="menu-pnts" style="text-align: center;">Logout</span>
       </button>
