--- a/src/app/main-content/slider-comp/video-item/video-item.component.html
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.html
@@ -1,4 +1,5 @@
 <div class="videoitem-cont">
-  <span class="title">Penis</span>
+  <!-- <span class="title">Penis</span> -->
   <img [src]="videoItem" />
+  <div [ngClass]="isHovered ? 'vis' : 'invis'" class="info-cont">Test</div>
 </div>
