--- a/src/app/main-content/slider-comp/slider-comp.component.scss
+++ b/src/app/main-content/slider-comp/slider-comp.component.scss
@@ -19,10 +19,48 @@ section {
           display: none;
         }
         > .item {
-          width: 300px;
-          height: 300px;
+          width: 450px;
+          height: 450px;
           margin: 10px;
-          @include dFlex(row, center,center)
+          @include dFlex(row, center, center);
+          > .grow-shadow {
+            display: flex;
+            position: relative;
+            vertical-align: middle;
+            -webkit-transform: perspective(1px) translateZ(0);
+            transform: perspective(1px) translateZ(0);
+            box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+            -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+            -webkit-transition-property: box-shadow, transform;
+            transition-property: box-shadow, transform;
+            &:hover {
+              box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+              -webkit-transform: scale(1.5);
+              transform: scale(1.5);
+              z-index: 10;
+            }
+          }
+          &:first-child {
+            .grow-shadow {
+              &:hover {
+                box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+                -webkit-transform: scale(1.5) translateX(60px);
+                transform: scale(1.5) translateX(60px);
+                z-index: 10;
+              }
+            }
+          }
+          &:last-child {
+            .grow-shadow {
+              &:hover {
+                box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+                -webkit-transform: scale(1.5) translateX(-60px);
+                transform: scale(1.5) translateX(-60px);
+                z-index: 10;
+              }
+            }
+          }
         }
       }
       > .scroll-button {
@@ -35,7 +73,7 @@ section {
           cursor: pointer;
           background-color: rgba(0, 0, 0, 0.8);
         }
-        
+
         z-index: 1;
         padding: 6px;
         @include dFlex(row, center, center);
