--- a/src/app/main-content/main/main.component.scss
+++ b/src/app/main-content/main/main.component.scss
@@ -3,16 +3,22 @@
 section {
     max-width: 1920px;
     width: 100%;
-    height: 100vh;
+    //height: 100vh;
     @include dFlex(column, flex-start, center);
     margin: 0px 124px;
     > app-logged-header {
         width: 100%;
         margin-bottom: 64px;
+        @media (max-width: 1920px) {
+            display: flex;
+            position: fixed;
+            max-width: 1920px;
+            z-index: 1000;
+            background-color: #141414;
+        }
     }
     > app-slider-comp {
         width: 100%;
-        height: 300px;
         margin-top: 120px;
     }
 }
