--- a/src/app/main-content/slider-comp/slider-comp.component.scss
+++ b/src/app/main-content/slider-comp/slider-comp.component.scss
@@ -1,5 +1,8 @@
 @import "../../../styles.scss";
 section {
+  @media (max-width: 1920px) {
+    margin: 0px 32px;
+  }
   .category-container {
     margin-bottom: 20px;
     > h2 {
@@ -34,6 +37,7 @@ section {
             transition-duration: 0.3s;
             -webkit-transition-property: box-shadow, transform;
             transition-property: box-shadow, transform;
+            border-radius: 4px;
             &:hover {
               box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
               -webkit-transform: scale(1.5);
