--- a/src/app/main-content/slider-comp/video-item/video-item.component.html
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.html
@@ -1,5 +1,5 @@
 <div class="videoitem-cont">
   <!-- <span class="title">Penis</span> -->
-  <img [src]="videoItem" />
+  <img [ngSrc]="videoItem" width="350" height="200"/>
   <div [ngClass]="isHovered ? 'vis' : 'invis'" class="info-cont">Test</div>
 </div>
