--- a/src/app/main-content/slider-comp/video-item/video-item.component.scss
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.scss
@@ -2,6 +2,8 @@
 
 .videoitem-cont {
   @include dFlex(column, center, flex-start);
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
   > span {
     color: #ffffff;
     font-size: 18px;
@@ -9,6 +11,8 @@
   > img {
     height: 200px;
     width: 350px;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
   }
   > .info-cont {
     transition: all 0.3s ease-in-out;
@@ -17,6 +21,8 @@
     background-color: #ffffff;
     color: red;
     height: 64px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
   }
   > .vis {
     opacity: 1 !important;
