--- a/src/app/main-content/slider-comp/video-item/video-item.component.scss
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.scss
@@ -17,12 +17,24 @@
   > .info-cont {
     transition: all 0.3s ease-in-out;
     display: flex;
+    flex-direction: column;
     width: 100%;
-    background-color: #ffffff;
-    color: red;
-    height: 64px;
+    background-color: #141414;
+    color: #ffffff;
+    height: 80px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    > .info-head {
+      @include dFlex(row, space-between, center);
+      padding: 4px 6px;
+      > div {
+        width: 50%;
+      }
+    }
+    > .description-foot {
+      @include dFlex(column, center, flex-start);
+      padding: 0px 6px;
+    }
   }
   > .vis {
     opacity: 1 !important;
