--- a/src/app/main-content/main/main.component.scss
+++ b/src/app/main-content/main/main.component.scss
@@ -28,13 +28,14 @@ section {
         bottom: 0;
         right: 0;
         left: 0;
-        background-color: red;
+       // background-color: red;
         @include dFlex(row, center, flex-start);
         padding-top: 124px;
         > .overlay-container {
-            height: 400px;
-            width: 300px;
-            background-color: white;
+            height: 600px;
+            width: 500px;
+            background-color: rgba($color: #040404, $alpha: 1.0);
+            border: #141414 1px solid;
             border-radius: 6px;
             box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
                         -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
